unpackaged/main/default/objects/BRIOLabs_Logging_Settings__mdt/BRIOLabs_Logging_Settings__mdt.object-meta.xml
<CustomObject>
    <label>BRIOLabs Logging Settings</label>
    <pluralLabel>BRIOLabs Logging Settings</pluralLabel>
</CustomObject>