unpackaged/main/default/objects/BRIOLabs_Logging_Settings__mdt/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Info</label>
    <type>Checkbox</type>
</CustomField>