unpackaged/main/default/objects/BRIOLabs_Logging_Settings__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Flow_Name__c</columns>
    <columns>Debug__c</columns>
    <columns>Error__c</columns>
    <columns>Info__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>